[gd_scene load_steps=2 format=3 uid="uid://75efyn1wxwpt"]

[ext_resource type="Script" uid="uid://dxlor43h11dji" path="res://ui/multiplayer_ui.gd" id="1_jt4se"]

[node name="MultiplayerUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jt4se")

[node name="LANStuff" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LanAreaLabel" type="Label" parent="LANStuff"]
layout_mode = 0
offset_left = 25.0
offset_top = 51.0
offset_right = 102.0
offset_bottom = 74.0
text = "LAN Area:"

[node name="HostLAN" type="Button" parent="LANStuff"]
layout_mode = 0
offset_left = 28.0
offset_top = 149.0
offset_right = 197.0
offset_bottom = 180.0
text = "Host New via LAN"

[node name="JoinLAN" type="Button" parent="LANStuff"]
layout_mode = 0
offset_left = 120.0
offset_top = 196.0
offset_right = 200.0
offset_bottom = 227.0
text = "Join LAN"

[node name="TextEditIPAdressLAN" type="TextEdit" parent="LANStuff"]
layout_mode = 0
offset_left = 17.0
offset_top = 254.0
offset_right = 206.0
offset_bottom = 295.0
text = "localhost"

[node name="TextEditPortLAN" type="TextEdit" parent="LANStuff"]
layout_mode = 0
offset_left = 18.0
offset_top = 307.0
offset_right = 205.0
offset_bottom = 348.0
text = "30455"

[node name="Button" type="Button" parent="LANStuff"]
layout_mode = 0
offset_left = 26.0
offset_top = 105.0
offset_right = 180.0
offset_bottom = 136.0
text = "Host Saved via LAN"

[node name="SteamStuff" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="SteamStuff"]
layout_mode = 0
offset_left = 229.0
offset_top = 36.0
offset_right = 463.0
offset_bottom = 67.0
text = "Host Saved via Steam"

[node name="HostSteam" type="Button" parent="SteamStuff"]
layout_mode = 0
offset_left = 227.0
offset_top = 71.0
offset_right = 464.0
offset_bottom = 102.0
text = "Host New via Steam"

[node name="RefreshLobbiesButton" type="Button" parent="SteamStuff"]
layout_mode = 0
offset_left = 483.0
offset_top = 72.0
offset_right = 633.0
offset_bottom = 103.0
text = "Refresh Lobby List"

[node name="Label" type="Label" parent="SteamStuff"]
layout_mode = 0
offset_left = 333.0
offset_top = 5.0
offset_right = 575.0
offset_bottom = 28.0
text = "Steam Area: (click lobby to join)"

[node name="ScrollContainer" type="ScrollContainer" parent="SteamStuff"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 0
offset_left = 220.0
offset_top = 149.008
offset_right = 620.0
offset_bottom = 349.008

[node name="LobbyList" type="VBoxContainer" parent="SteamStuff/ScrollContainer"]
custom_minimum_size = Vector2(400, 200)
layout_mode = 2

[connection signal="pressed" from="LANStuff/HostLAN" to="." method="_on_host_lan_pressed"]
[connection signal="pressed" from="LANStuff/JoinLAN" to="." method="_on_join_lan_pressed"]
[connection signal="pressed" from="SteamStuff/HostSteam" to="." method="_on_host_steam_pressed"]
[connection signal="pressed" from="SteamStuff/RefreshLobbiesButton" to="." method="_on_refresh_lobbies_button_pressed"]
